# Plugify

./: README.md
.claude-plugin/: marketplace.json  plugin.json
bootstrap/: README.md  cli.mjs  package.json
bootstrap-py/: README.md  pyproject.toml
bootstrap-py/src/cc_plugify/: __init__.py  cli.py
plugins/scenario-first/.claude-plugin/: plugin.json
plugins/scenario-first/skills/: scenario-first-expand  scenario-first-goal  scenario-first-review  scenario-first-spec  scenario-first-throw
skills/presentation_slides/: SKILL.md
skills/presentation_slides/references/: bundle-script.md  capture-script.md
skills/push-experience/: SKILL.md
skills/self-review/: SKILL.md
