[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-plugify"
version = "0.1.0"
description = "One-shot bootstrapper for the chanshin0/Plugify Claude Code marketplace."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "chanshin0" }]
keywords = ["claude-code", "claude", "marketplace", "plugin", "bootstrap"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/chanshin0/Plugify"
Repository = "https://github.com/chanshin0/Plugify"
Issues = "https://github.com/chanshin0/Plugify/issues"

[project.scripts]
cc-plugify = "cc_plugify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_plugify"]

[tool.hatch.build.targets.sdist]
include = ["src/cc_plugify", "README.md", "pyproject.toml"]
